--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "transformice-electron",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A cross-platform Transformice standalone app running on Electron.",
   "main": "main.js",
   "scripts": {
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/cngc4e/Transformice-Electron#readme",
   "devDependencies": {
     "electron": "^10.1.3",
-    "electron-packager": "^15.1.0"
+    "electron-packager": "^15.1.0",
+    "get-port": "^5.1.1"
   }
 }
