--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "transformice-electron",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "A cross-platform Transformice standalone app running on Electron.",
   "main": "main.js",
   "scripts": {
@@ -30,7 +30,9 @@
   "homepage": "https://github.com/cngc4e/Transformice-Electron#readme",
   "devDependencies": {
     "electron": "^10.1.3",
-    "electron-packager": "^15.1.0",
+    "electron-packager": "^15.1.0"
+  },
+  "dependencies": {
     "get-port": "^5.1.1"
   }
 }
