Set up Travis build for MacOS

--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
     "mac": {
       "category": "public.app-category.games",
       "target": "dmg",
+      "identity": false,
+      "publish": {
+        "provider": "github",
+        "releaseType": "release"
+      },
       "files": [
         "flash-plugin/mac"
       ]
