--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mac": {
       "category": "public.app-category.games",
       "target": "dmg",
+      "identity": false,
       "files": [
         "flash-plugin/mac"
       ]
