--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "transformice-electron",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "A cross-platform Transformice standalone app running on Electron.",
   "main": "main.js",
   "scripts": {
@@ -14,7 +14,7 @@
   },
   "build": {
     "productName": "Transformice",
-    "appId": "com.cngc4e.transformice.electron",
+    "appId": "io.bagueatt.transformice.electron",
     "icon": "resources/icon.png",
     "files": [
       "resources",
@@ -53,17 +53,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cngc4e/Transformice-Electron.git"
+    "url": "git+https://github.com/Cassolette/Transformice-Electron.git"
   },
   "keywords": [
     "tfm"
   ],
-  "author": "cngc4e",
+  "author": "Cassolette",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cngc4e/Transformice-Electron/issues"
+    "url": "https://github.com/Cassolette/Transformice-Electron/issues"
   },
-  "homepage": "https://github.com/cngc4e/Transformice-Electron#readme",
+  "homepage": "https://github.com/Cassolette/Transformice-Electron#readme",
   "devDependencies": {
     "electron": "^11.1.1",
     "electron-builder": "^22.9.1"
