--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   },
   "homepage": "https://github.com/Cassolette/Transformice-Electron#readme",
   "devDependencies": {
+    "@tsconfig/node12": "^1.0.7",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "electron": "11.4.4",
