--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
+    "extends": "@tsconfig/node12/tsconfig.json",
     "compilerOptions": {
-        "module": "commonjs",
+        "strict": false,
         "noImplicitAny": true,
+        "noImplicitThis": true,
         "sourceMap": false,
         "outDir": "srcdist",
         "baseUrl": ".",
