--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "transformice-electron",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "A cross-platform Transformice standalone app running on Electron.",
   "main": "srcdist/main.js",
   "scripts": {
@@ -69,11 +69,11 @@
   "homepage": "https://github.com/Cassolette/Transformice-Electron#readme",
   "devDependencies": {
     "@tsconfig/node12": "^1.0.7",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "electron": "11.4.4",
-    "electron-builder": "^22.10.5",
-    "eslint": "^7.25.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
+    "electron": "11.4.5",
+    "electron-builder": "22.10.5",
+    "eslint": "^7.26.0",
     "typescript": "^4.2.4"
   },
   "dependencies": {
