--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "transformice-electron",
-  "version": "2.0.5",
+  "version": "2.0.6",
   "description": "A cross-platform Transformice standalone app running on Electron.",
   "main": "srcdist/main.js",
   "scripts": {
@@ -79,6 +79,7 @@
   },
   "dependencies": {
     "electron-settings": "^4.0.2",
-    "get-port": "^5.1.1"
+    "get-port": "^5.1.1",
+    "node-fetch": "^3.0.0-beta.9"
   }
 }
