--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "noImplicitAny": true,
         "noImplicitThis": true,
         "sourceMap": false,
+        "removeComments": true,
         "outDir": "srcdist",
         "baseUrl": ".",
         "paths": {
