--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   "homepage": "https://github.com/Cassolette/Transformice-Electron#readme",
   "devDependencies": {
     "@tsconfig/node12": "^1.0.7",
+    "@types/tar": "^4.0.4",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
     "electron": "11.4.7",
@@ -80,6 +81,7 @@
   "dependencies": {
     "electron-settings": "^4.0.2",
     "get-port": "^5.1.1",
-    "node-fetch": "^3.0.0-beta.9"
+    "node-fetch": "^3.0.0-beta.9",
+    "tar": "^6.1.0"
   }
 }
