--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "transformice-electron",
-  "version": "2.0.7",
+  "version": "2.0.8",
   "description": "A cross-platform Transformice standalone app running on Electron.",
   "main": "srcdist/main.js",
   "scripts": {
@@ -73,7 +73,7 @@
     "@types/tar": "^4.0.4",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
-    "electron": "11.4.7",
+    "electron": "^10.4.7",
     "electron-builder": "22.10.5",
     "eslint": "^7.27.0",
     "typescript": "^4.2.4"
