Switch to `got` for requests
node-fetch hasn't been the quickest to land bug fixes / updates and that's
getting pretty annoying for such a relatively simple library. `got` is cool,
it's active, has great docs, proper TS support, and most importantly it actually
makes sense.

--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
   "dependencies": {
     "electron-settings": "^4.0.2",
     "get-port": "^5.1.1",
-    "node-fetch": "3.0.0-beta.9",
+    "got": "^11.8.2",
     "tar": "^6.1.1"
   }
 }
