--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   "homepage": "https://github.com/Cassolette/Transformice-Electron#readme",
   "devDependencies": {
     "@tsconfig/node12": "^1.0.9",
+    "@types/semver": "^7.3.9",
     "@types/tar": "^4.0.5",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
@@ -82,6 +83,8 @@
     "electron-settings": "^4.0.2",
     "get-port": "^5.1.1",
     "got": "^11.8.2",
+    "pupa": "^3.1.0",
+    "semver": "^7.3.5",
     "tar": "^6.1.1"
   }
 }
